# XReadAgent

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md  workspace-storage.md
.trellis/spec/cross-layer/: api-and-events.md  index.md  sidecar-integration.md  workspace-and-files.md
.trellis/spec/electron/: index.md  ipc-and-security.md  quality-guidelines.md  sidecar-lifecycle.md
.trellis/spec/frontend/: architecture.md  component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-and-api.md  state-management.md  type-safety.md  ui-guidelines.md
.trellis/spec/guides/: code-reuse-thinking-guide.md  cross-layer-thinking-guide.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-22-build-sciresearch-agent-literature-reading-knowledge-base/: check.jsonl  plan.md  task.json
.trellis/tasks/05-22-build-sciresearch-agent-literature-reading-knowledge-base/research/: llm-wiki-prior-art.md
.trellis/tasks/05-27-settings-ui/: implement.jsonl  prd.md  task.json
.trellis/tasks/05-30-fix-release-python-bundle/: task.json
.trellis/tasks/05-30-fix-release-python-bundle/research/: python-build-standalone-assets.md
.trellis/tasks/05-30-publish-v0-0-2-release/: task.json
.trellis/tasks/06-01-fix-sidecar-serve-frontend-spa-and-remove-404-not-found-at/: task.json
.trellis/tasks/06-01-release-v0-0-4-sidecar-fix-push-tag-let-ci-build-publish/: task.json
.trellis/tasks/06-09-complete-pdf-upload-babeldoc-translation/: task.json
.trellis/tasks/06-09-complete-pdf-upload-babeldoc-translation/research/: source-path-and-translation-flow.md
.trellis/tasks/06-10-redesign-settings-ux-language-switch/: prd.md  task.json
.trellis/tasks/06-10-redesign-settings-ux-language-switch/research/: settings-language-architecture.md
.trellis/tasks/06-11-release-v0-0-8/: task.json
.trellis/tasks/06-11-release-v0-0-9-sidecar-cold-start-fix-bump-tag-ci-build-publish/: check.jsonl  prd.md  task.json
.trellis/workspace/xingran/: index.md  journal-1.md
backend/scripts/samples/: sample-paper.md
backend/src/xreadagent/: __init__.py
backend/src/xreadagent/agents/: __init__.py  _defaults.py  _merge.py  crystallize.py  crystallize_schema.py  ingest.py  ingest_schema.py  json_planner.py  orchestrator.py  query.py  query_orchestrator.py  query_schema.py  query_tools.py  tools.py
backend/src/xreadagent/api/: __init__.py  __main__.py  ingest_jobs.py  main.py  providers_router.py  settings.py  wiki_router.py
backend/src/xreadagent/cli/: __init__.py  __main__.py  env.py  ingest_cmd.py  init_cmd.py  llm_flags.py  main.py  mcp_cmd.py  output.py  query_cmd.py  reindex_cmd.py  show_cmd.py  stubs.py  translate_cmd.py
backend/src/xreadagent/llm/: __init__.py  config.py  gateway.py
backend/src/xreadagent/mcp/: __init__.py  __main__.py  _helpers.py  resources.py  server.py  tools.py
backend/src/xreadagent/pipeline/: __init__.py  router.py  (+3 more)
backend/tests/: README.md  __init__.py  test_api.py  test_apply_crystallize.py  test_apply_plan.py  test_babeldoc_adapter.py  test_babeldoc_meta.py  test_cli.py  test_crystallize_propose.py  test_crystallize_schema.py  test_distillation.py  test_embedder.py  test_env.py  test_gateway.py  test_index_regen.py  test_ingest_agent_with_mock_llm.py  test_ingest_job_service.py  test_ingest_jobs_api.py  test_ingest_query_api.py  test_ingest_schema.py  test_json_planner.py  test_lazy_imports.py  test_log.py  test_markitdown_converter.py  test_mcp_server.py  test_merge_concept_helper.py  test_mineru_converter.py  test_orchestrator_cache_hit.py  test_pages.py  test_paths.py  test_providers_router.py  test_query_agent_with_mock_planner.py  test_query_isolation.py  test_query_schema.py  test_query_tools.py  test_router.py  test_schemas.py  test_search.py  test_settings.py  test_sources.py  (+10 more)
backend/tests/integration/: __init__.py  test_babeldoc_real_run.py
docs/mcp/: claude-desktop-config.json  cursor-config.md
electron/: .gitignore  electron-builder.yml  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.test.json
electron/scripts/: build.mjs  bundle-python.mjs  dev.mjs  generate-icons.mjs  pack.mjs
electron/src/: deeplink.ts  external-links.ts  main.ts  menu.ts  preload.d.ts  preload.ts  sidecar.ts  splash.ts  startup.ts  workspaces.ts
electron/tests/: bundle-python.test.ts  deeplink.test.ts  external-links.test.ts  menu.test.ts  sidecar.test.ts  splash.test.ts  startup.test.ts  workspaces.test.ts
electron/tests/e2e/: sidecar-lifecycle.test.ts
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: app.tsx  main.tsx  router.tsx
frontend/src/lib/: api.ts  i18n.tsx  ingest-job.ts  notifications.ts  pdfjs.ts  platform.ts  theme.tsx  use-page-renderer.ts  use-workspace-actions.ts  use-workspaces.ts  utils.ts  workspace.ts
frontend/src/routes/: concept.tsx  paper-index.tsx  paper-read.tsx  paper.tsx  queries.tsx  query-detail.tsx  settings.tsx  workspace.tsx
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  electron.d.ts
frontend/tests/: setup.ts
frontend/tests/components/: models-tab.test.tsx
frontend/tests/lib/: api.test.ts  i18n.test.tsx  ingest-job.test.ts  notifications.test.ts  platform.test.ts  theme.test.tsx  use-page-renderer-text-layer.test.tsx  use-page-renderer.test.tsx  use-workspace-actions.test.tsx  workspace.test.ts
frontend/tests/routes/: concept.test.tsx  paper-index.test.tsx  paper-read.test.tsx  queries.test.tsx  router-lazy.test.tsx  settings.test.tsx  workspace-empty.test.tsx  workspace.test.tsx
resources/: .gitkeep
scripts/: bump-version.mjs
(+188 files in other folders)
