[project]
name = "xreadagent"
version = "0.0.1"
description = "Scientific research agent with LLM-Wiki memory and layout-preserving PDF translation."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "XReadAgent contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "httpx>=0.27",
    "websockets>=13",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/xreadagent"]

[tool.hatch.build.targets.sdist]
include = ["backend/src", "README.md", "LICENSE", "NOTICE", "pyproject.toml"]

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend/src", "backend/tests"]
extend-exclude = [".trellis", ".venv", ".agents", ".claude", ".codex", ".opencode"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend/src"]
mypy_path = "backend/src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["xreadagent.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
