[project]
name = "xreadagent"
version = "0.0.7"
description = "Scientific research agent with LLM-Wiki memory and layout-preserving PDF translation."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "XReadAgent contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "httpx>=0.27",
    "websockets>=13",
    "python-multipart>=0.0.12",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.5",
    "pyyaml>=6.0",
    # Agent harness — deepagents brings langchain + langgraph + langchain-anthropic.
    # Pinned to 0.x because the SDK has not yet declared 1.0 API stability; bump on
    # the deepagents 1.0 release. langchain-openai is added explicitly because
    # deepagents only pulls in Anthropic / Gemini by default.
    "deepagents>=0.6,<1.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    # Phase 2: layout-preserving PDF translation. Pinned exact because BabelDOC
    # declares all APIs internal — version bumps are breaking-change events and
    # must be gated on a smoke-PDF round-trip test (see plan.md §3).
    # Pulls in transitively: pymupdf (AGPL), onnxruntime, huggingface_hub,
    # tenacity, hyperscan (x86-only). License compatibility tracked in NOTICE.
    "babeldoc==0.6.2",
    # MCP (Model Context Protocol) server SDK. Exposes XReadAgent as an
    # MCP server so external AI tools (Claude Desktop, Cursor, etc.) can
    # call ingest/query/translate/browse as tools. Zero dependency conflicts
    # with the existing stack (pydantic>=2.11, httpx, starlette, uvicorn).
    "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "types-pyyaml>=6.0",
]

[project.scripts]
xreadagent = "xreadagent.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/xreadagent"]

[tool.hatch.build.targets.sdist]
include = ["backend/src", "README.md", "LICENSE", "NOTICE", "pyproject.toml"]

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend/src", "backend/tests"]
extend-exclude = [".trellis", ".venv", ".agents", ".claude", ".codex", ".opencode"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend/src"]
mypy_path = "backend/src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["xreadagent.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["markitdown", "markitdown.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "deepagents",
    "deepagents.*",
    "langchain",
    "langchain.*",
    "langchain_anthropic",
    "langchain_anthropic.*",
    "langchain_core",
    "langchain_core.*",
    "langchain_openai",
    "langchain_openai.*",
    "langgraph",
    "langgraph.*",
    "babeldoc",
    "babeldoc.*",
    "numpy",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-m 'not babeldoc and not mineru'"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "mineru: requires the MinerU CLI installed (skipped by default)",
    "babeldoc: requires the BabelDOC engine + ~80MB model assets (skipped by default)",
]
